cmake_minimum_required(VERSION 4.2)
project(ExerciceMaitriseC C)

set(CMAKE_C_STANDARD 23)

add_executable(ExerciceMaitriseC main.c)
add_executable(E1 "Niveau 1/Bases et entrées_sorties/E1.c")
add_executable(E2 "Niveau 1/Bases et entrées_sorties/E2.c")
add_executable(E3 "Niveau 1/Bases et entrées_sorties/E3.c")
add_executable(E4 "Niveau 1/Bases et entrées_sorties/E4.c")
add_executable(E5 "Niveau 1/Bases et entrées_sorties/E5.c")
add_executable(E6 "Niveau 1/Bases et entrées_sorties/E6.c")
add_executable(E7 "Niveau 1/Bases et entrées_sorties/E7.c")
add_executable(E8 "Niveau 1/Bases et entrées_sorties/E8.c")
add_executable(E9 "Niveau 1/Bases et entrées_sorties/E9.c")
add_executable(E10 "Niveau 1/Conditions/E10.c")
add_executable(E11 "Niveau 1/Conditions/E11.c")
add_executable(E12 "Niveau 1/Conditions/E12.c")
add_executable(E13 "Niveau 1/Conditions/E13.c")
add_executable(E14 "Niveau 1/Conditions/E14.c")
add_executable(E15 "Niveau 1/Conditions/E15.c")
